# anemia-detection-ai

./: .gitignore  .pre-commit-config.yaml  README.md  kaggle_notebook.ipynb  netlify.toml  pyproject.toml  render.yaml  requirements-data.txt  requirements-training.txt
.github/workflows/: benchmark-report.yml  ci.yml  data-pipeline.yml  deploy-hf-space.yml  inference-backup.yml  train.yml
data/: README.md  data_pipeline.sh  dataset_registry.yaml
data/scripts/: download_datasets.py  push_to_hf.py  quality_filter.py  unify_datasets.py
docs/superpowers/plans/: 2026-03-24-plan1-platform-setup-repo-scaffold.md  2026-03-24-plan2-data-pipeline.md  2026-03-24-plan3-model-training.md  2026-03-24-plan4-inference-api.md  (+2 more)
frontend/: index.html  manifest.json  service-worker.js
frontend/css/: styles.css
frontend/js/: advanced-mode.js  api.js  app.js  i18n.js  screening-mode.js
inference/: Dockerfile  app.py  gradcam.py  model_loader.py  predict.py  requirements.txt
scripts/: generate_benchmark_report.py  inject-env.js  poll_kaggle_run.py  trigger_kaggle_training.py
tests/: conftest.py  test_automation_scripts.py  test_dataset.py  test_download.py  test_inference.py  test_metrics.py  test_models.py  test_quality_filter.py  test_smoke.py  test_training_validation.py  test_unify.py
training/: config.yaml  cross_validation.py  push_model_to_hf.py  train.py
training/evaluation/: metrics.py
training/models/: convnext_tiny.py  efficientnet_b4.py  efficientnetv2_s.py  ensemble.py
training/utils/: augmentation.py  dataset.py  preprocessing.py
(+1 files in other folders)
